@@ -1,0 +1,58 @@
+package mcjty.rftoolsstorage.compat.xnet;
+
+import mcjty.rftoolsbase.api.storage.IStorageScanner;
+import mcjty.rftoolsbase.api.xnet.channels.IChannelSettings;
+import mcjty.rftoolsbase.api.xnet.channels.IChannelType;
+import mcjty.rftoolsbase.api.xnet.channels.IConnectorSettings;
+import net.minecraft.inventory.IInventory;
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.Direction;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.World;
+import net.minecraftforge.items.CapabilityItemHandler;
+
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+
+public class StorageChannelType implements IChannelType {
+
+    @Override
+    public String getID() {
+        return "rftools.storage";
+    }
+
+    @Override
+    public String getName() {
+        return "Storage";
+    }
+
+    @Override
+    public boolean supportsBlock(@Nonnull World world, @Nonnull BlockPos pos, @Nullable Direction side) {
+        TileEntity te = world.getTileEntity(pos);
+        if (te == null) {
+            return false;
+        }
+        if (te.getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY, side).isPresent()) {
+            return true;
+        }
+        if (te instanceof IInventory) {
+            return true;
+        }
+        if (te instanceof IStorageScanner) {
+            return true;
+        }
+        return false;
+    }
+
+    @Nonnull
+    @Override
+    public IConnectorSettings createConnector(@Nonnull Direction side) {
+        return new StorageConnectorSettings(side);
+    }
+
+    @Nonnull
+    @Override
+    public IChannelSettings createChannel() {
+        return new StorageChannelSettings();
+    }
+}
