@@ -1,3 +1,6 @@
+Upcoming:
+- Added back support for the XNet channel support
+
 1.16-2.0.6:
 - Fixed a problem with upgrading storage modules. The contents would be lost
 - New 'rftoolsstorage restore' command that you can use to restore a lost modular storage card
